<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".view.BuscarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingHorizontal="30dp"
                android:paddingVertical="5dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_buscar"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Canciones, Artistas o Albums"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

            </LinearLayout>




        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/canciones"
            android:textColor="@color/primaryTextColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerPorTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/mostrarCanciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/mostrarCanciones"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="12dp"
            android:textAllCaps="false"
            android:background="?android:attr/selectableItemBackground"
            style="?android:attr/borderlessButtonStyle"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/artistas"
            android:textColor="@color/primaryTextColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerPorArtista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/mostrarArtistas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/mostrarArtistas"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="12dp"
            android:textAllCaps="false"
            android:background="?android:attr/selectableItemBackground"
            style="?android:attr/borderlessButtonStyle"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/albums"
            android:textColor="@color/primaryTextColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerPorAlbum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/mostrarAlbums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/mostrarAlbums"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="12dp"
            android:textAllCaps="false"
            android:background="?android:attr/selectableItemBackground"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>


</ScrollView>