<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="150dp"
    android:minWidth="350dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".view.CrearPlaylistFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextNombrePlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/nombrePlaylist"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/hint"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:importantForAutofill="no"
            />

        <Button
            android:id="@+id/botonCrearPlaylist"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextNombrePlaylist"

            android:layout_alignRight="@id/editTextNombrePlaylist"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/crearPlaylist"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor" />

        <Button
            android:id="@+id/botonCancelar"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextNombrePlaylist"
            android:layout_alignLeft="@id/editTextNombrePlaylist"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancelar"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor" />

    </RelativeLayout>

</LinearLayout>